# astrojosh.github.io

./: .pre-commit-config.yaml  CNAME  Makefile  README.md  index.htm  pyproject.toml  weather.htm
css/: main.css
docs/: Makefile  README.md
docs/projects/collision_sim/: README.md
docs/src/projects/quantum_circuits/: README.md
docs/src/projects/solve_pde/: README.md
projects/collision_sim/: README.md
style/: main.css
templates/: docs_template.md  site_template.htm
