[tool.poetry]
name = "astrojosh-github-io"
version = "0.1.0"
description = "Code for hosting Github Pages website"
authors = ["astrojosh"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pylint = "^2.17.5"
mypy = "^1.5.0"
pre-commit = "^3.3.3"
pre-commit-hooks = "^4.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
